--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="headline poppins">
       <h1 class="name" id="delay">I'm Juan Carlos. <br />Glad to see you!</h1>
       <p class="desc">I'm a software developer! I can help you build a product, feature or website. Look through some of my work and experience! If you like what you see and have a project you need coded, don't hesitate to contact me.</p>
-      <h3 class="connect">LET'S CONNECT</h3>
+      <p class="connect">LET'S CONNECT</p>
       <ul class="container-3">
         <li>
           <a class="twitter" href="https://www.twitter.com" rel="noopener noreferrer" target="_blank"><img alt="twitter" width="20px" height="20px" src="images/twitter.png"/></a>
