--- a/index.html
+++ b/index.html
@@ -327,12 +327,15 @@
         <p id="desc3" class="poppins paragraph2">If you have an application you are interested in developing, a feature that you need built or a project that needs coding.  I'd love to help with it!</p>
         <form action="https://formspree.io/f/mjvdqaka" method="post" class="form1">
           <div class="box2">
+              <label for="names" class="label">Name:</label>
               <input name="names" id="names" type="text" class="poppins" placeholder="Lorem Ipsum"  maxlength="30" required>
           </div>
           <div class="box2">
+            <label for="email" class="label">Email:</label>
               <input name="email" id="email" type="email" class="poppins" placeholder="loremipsum@gmail.com" required>
           </div>
           <div class="box3">
+            <label for="textarea" class="label">Comment:</label>
               <textarea id="textarea" class="poppins" name="message" rows="5" cols="30" placeholder="Write your message here..." maxlength="500" required></textarea>
           </div>
           <button type="submit" id="getintouch" class="button3">Get in touch</button>
